--- a/css/styles.css
+++ b/css/styles.css
@@ -23,10 +23,14 @@ body {
   position: absolute;
   top: 0;
   left: 50%;
-  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+      -ms-transform: translateX(-50%);
+          transform: translateX(-50%);
 }
 
 .site-navigation {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0;
   margin: 0;
@@ -36,8 +40,12 @@ body {
 .navigation-item {
   width: 20%;
   height: 56px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .navigation-item:first-child {
@@ -58,7 +66,9 @@ body {
 }
 
 .navigation-item:nth-child(n+3) {
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
 }
 
 .site-navigation a {
@@ -76,7 +86,8 @@ body {
   max-width: 1200px;
   margin: 0 auto;
   background-color: #ffffff;
-  box-shadow: 0 5px 15px rgba(0,0,0,.2);
+  -webkit-box-shadow: 0 5px 15px rgba(0,0,0,.2);
+          box-shadow: 0 5px 15px rgba(0,0,0,.2);
 }
 
 .navigation-link:hover,
@@ -103,15 +114,22 @@ color: #81b3d2;
 
 .banner {
   height: 510px;
-  background-image: url("../img/polygon.svg"), url("../img/bg.png");
-  background-position: 50% 100%, 100% 20%;
+  background: url("../img/polygon.svg") no-repeat 50% 100%, #a1c6e0 url("../img/bg.png") no-repeat 100% 20%;;
   background-size: 100% auto, 100% auto;
-  background-repeat: no-repeat;
   text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .advantages-intro {
@@ -147,8 +165,11 @@ color: #81b3d2;
 }
 
 .advantages-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -156,8 +177,11 @@ color: #81b3d2;
 
 .advantages-item-left,
 .advantages-item-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .advantages-text {
@@ -167,10 +191,11 @@ color: #81b3d2;
   text-align: center;
   padding-right: 60px;
   padding-left: 60px;
-  padding-top: 23px;
+  padding-top: 25px;
   padding-bottom: 40px;
   width: 33.33334%;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 .advantages-photo {
@@ -186,30 +211,31 @@ color: #81b3d2;
   font-size: 21px;
   padding-right: 61px;
   padding-left: 61px;
+  margin-bottom: 25px;
 }
 
 .reason-number {
   font-size: 14px;
-  padding-top: 15px;
 }
+
 .reason-three {
   padding-right: 60px;
   padding-left: 60px;
 }
 
 .reason-four {
-  padding-right: 60px;
+  padding-right: 62px;
   padding-left: 60px;
 }
 
 .reason-five {
-  padding-right: 74px;
-  padding-left: 70px;
+  padding-left: 71px;
+  padding-right: 72px;
 }
 
 .advantages-text p {
   font-size: 14px;
-  padding-top: 13px;
+  padding-top: 6px;
 }
 
 .features-item {
@@ -222,24 +248,24 @@ color: #81b3d2;
 
 .option-home {
   padding-right: 60px;
-  padding-left: 60px;
-  padding-top: 2px;
+  padding-left: 56px;
+  padding-top: 3px;
 }
 
 .option-food {
   padding-right: 42px;
-  padding-left: 45px;
+  padding-left: 51px;
   padding-top: 2px;
 }
 
 .option-present {
   padding-right: 42px;
-  padding-left: 45px;
-  padding-top: 1px;
+  padding-left: 41px;
+  padding-top: 2px;
 }
 
 .present {
-  padding-left: 10px;
+  padding-left: 1px;
 }
 
 .features-item-home {
@@ -288,6 +314,8 @@ color: #81b3d2;
 }
 
 .features-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   min-height: 330px;
@@ -308,8 +336,8 @@ color: #81b3d2;
 
 .advantages-text-bridge {
   padding-right: 40px;
-  padding-left: 45px;
-  padding-top: 23px;
+  padding-left: 41px;
+  padding-top: 24px;
   padding-bottom: 40px;
 }
 
@@ -318,8 +346,9 @@ color: #81b3d2;
   line-height: 21px;
   text-align: center;
   width: 33.33334%;
-  box-sizing: border-box;
-  padding-bottom: 43px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  padding-bottom: 45px;
   padding-top: 26px;
 }
 
@@ -328,10 +357,11 @@ color: #81b3d2;
   font-size: 21px;
   padding-left: 130px;
   padding-right: 128px;
+  margin-bottom: 23px;
 }
 
 .advantages-item-grey p {
-  padding-top: 10px;
+  padding-top: 7px;
 }
 
 .booking {
@@ -371,6 +401,7 @@ color: #81b3d2;
   padding-bottom: 30px;
   font-weight: bold;
   display: inline-block;
+  vertical-align: middle;
   text-decoration: none;
 }
 
@@ -385,10 +416,11 @@ color: #81b3d2;
 }
 
 .map {
-  background-image: url(../img/map.png);
-  height: 593px;
+  width: 100%;
+  height: 470px;
   background-repeat: no-repeat;
   background-position: 50% 0%;
+  height: 593px;
   background-size: 100% auto;
   margin-bottom: -120px;
 }
@@ -406,25 +438,36 @@ color: #81b3d2;
   color: #000000;
   font-weight: bold;
   font-size: 14px;
-  line-height: 39px;
+  line-height: 38px;
   text-transform: uppercase;
   background-color: #ffffff;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   width: 568px;
   padding: 55px;
   left: 50%;
   top: 100%;
-  transform: translate(-50%, -100%);
+  -webkit-transform: translate(-50%, -100%);
+      -ms-transform: translate(-50%, -100%);
+          transform: translate(-50%, -100%);
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
   transition: all 0.5s ease-in;
   z-index: 1;
+  -webkit-box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
+          box-shadow: 0px 7px 15px 0 rgba(0, 1, 1, 0.15);
 }
 
 .popup-show {
   visibility: visible;
-  transform: translate(-50%, 0);
+  -webkit-transform: translate(-50%, 0);
+      -ms-transform: translate(-50%, 0);
+          transform: translate(-50%, 0);
 }
 
 .popup-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 100%;
   height: 38px;
@@ -433,13 +476,14 @@ color: #81b3d2;
 
 .input-popup-label {
   width: 100px;
-  margin-right: 17px;
-  flex-shrink: 0;
+  margin-right: 13px;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   text-align: left;
 }
 
 .popup-item-count-child .input-popup-label {
-  width: 47px;
+  width: 50px;
 }
 
 .input-popup {
@@ -448,11 +492,10 @@ color: #81b3d2;
   line-height: 26px;
   text-transform: uppercase;
   margin-bottom: 55px;
-  box-sizing: border-box;
-  padding-top: 14px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding-left: 8px;
-  padding-right: 10px;
-  padding-bottom: 13px;
+  padding-right: 8px;
   background-color: #f2f2f2;
   border: 2px solid #f2f2f2;
   height: 38px;
@@ -467,7 +510,6 @@ color: #81b3d2;
 .input-popup-adult:focus,
 .input-popup-child:focus {
   background-color: #ebebeb;
-
 }
 
 .input-popup:focus,
@@ -482,9 +524,9 @@ color: #81b3d2;
   width: 38px;
   border: none;
   background-color: #f2f2f2;
-  display: inline-block;
   fill: #cacaca;
   outline: none;
+  display: block;
 }
 
 .calendar:hover,
@@ -497,14 +539,25 @@ color: #81b3d2;
   fill: #81b3d2;
 }
 
+.calendar-icon {
+  vertical-align: middle;
+  width: 21px;
+  height: 22px;
+}
+
 .popup-item-count {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  margin-bottom: 55px;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  margin-bottom: 54px;
 }
 
 .minus {
   display: inline-block;
+  vertical-align: middle;
   width: 38px;
   height: 38px;
   background-color: #f2f2f2;
@@ -533,6 +586,7 @@ color: #81b3d2;
 
 .plus {
   display: inline-block;
+  vertical-align: middle;
   width: 38px;
   height: 38px;
   background-color: #f2f2f2;
@@ -552,15 +606,23 @@ color: #81b3d2;
 }
 
 .popup-item-count-adult {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .popup-item-count-child {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   padding: 0;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 .input-popup-adult {
@@ -572,7 +634,8 @@ color: #81b3d2;
   background-color: #f2f2f2;
   border: none;
   text-align: center;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 
 }
 
@@ -585,10 +648,10 @@ color: #81b3d2;
   background-color: #f2f2f2;
   border: none;
   text-align: center;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   outline: none;
 }
-
 
 .popup-search {
   text-transform: uppercase;
@@ -598,11 +661,10 @@ color: #81b3d2;
   background-color: #81b3d2;
   border: none;
   font-weight: bold;
-  padding-top: 17px;
-  padding-bottom: 22px;
   width: 100%;
   height: 58px;
   display: inline-block;
+  vertical-align: middle;
 }
 
 .popup-search:hover,
@@ -616,10 +678,15 @@ color: #81b3d2;
 }
 
 .main-footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-around;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   opacity: 0.9;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   min-height: 120px;
   margin: 0 auto;
   width: 1200px;
@@ -636,17 +703,26 @@ color: #81b3d2;
   font-size: 21px;
   line-height: 26px;
   text-transform: uppercase;
-  transform: translate(15px);
+  -webkit-transform: translate(15px);
+      -ms-transform: translate(15px);
+          transform: translate(15px);
 }
 
 .social-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   margin: 0 auto;
   padding: 0;
   list-style: none;
-  transform: translate(33px);
+  -webkit-transform: translate(33px);
+      -ms-transform: translate(33px);
+          transform: translate(33px);
 }
 
 .social-item {
@@ -654,9 +730,15 @@ color: #81b3d2;
 }
 
 .social-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   width: 46px;
   height: 48px;
   background-color: #81b3d2;
@@ -668,13 +750,19 @@ color: #81b3d2;
 }
 
 .copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 26px;
   color: #000000;
-  transform: translate(19px);
+  -webkit-transform: translate(19px);
+      -ms-transform: translate(19px);
+          transform: translate(19px);
 }
 
 .copyright-link {
@@ -683,7 +771,9 @@ color: #81b3d2;
 
 .copyright a {
   display: block;
-  transform: translate(0px, 6px);
+  -webkit-transform: translate(0px, 6px);
+      -ms-transform: translate(0px, 6px);
+          transform: translate(0px, 6px);
 }
 
 .social-item:active path {
@@ -700,18 +790,16 @@ color: #81b3d2;
 }
 
 .filter {
+  background: #667e92 url("../img/filter-background.jpg") no-repeat 50% 50%;
   padding-left: 72px;
   padding-right: 72px;
+  padding-bottom: 9px;
 }
 
 .filter-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-}
-
-.filter {
-  background-image: url("../img/filter-background.jpg");
-  background-position: 50% 50%;
-  height: 217px;
 }
 
 .filter-field {
@@ -719,13 +807,13 @@ color: #81b3d2;
   padding: 0;
   margin: 0;
   margin-top: 27px;
-  margin-right: 115px;
+  margin-right: 117px;
 }
 
 .filter-field-range {
   width: 314px;
   margin: 0;
-  margin-left: auto;
+  margin-left: 232px;
   margin-top: 27px;
 }
 
@@ -735,12 +823,13 @@ color: #81b3d2;
   line-height: 21px;
   color: #ffffff;
   text-transform: uppercase;
-  margin-bottom: 13px;
+  margin-bottom: 11px;
 }
 
 .price-controls {
   height: 32px;
-  margin-bottom: 18px;
+  width: 314px;
+  margin-bottom: 19px;
   vertical-align: top;
   border: 2px solid #ffffff;
   border-radius: 2px;
@@ -755,13 +844,14 @@ color: #81b3d2;
   left: 50%;
   width: 2px;
   height: 22px;
-  transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
   background: #ffffff;
 }
 
 .range-controls {
   position: relative;
-
   margin-bottom: 20px;
 }
 
@@ -778,18 +868,19 @@ color: #81b3d2;
 
 .input-price-label {
   font-size: 14px;
-  line-height: 32px;
+  line-height: 29px;
   color: #ffffff;
   text-transform: uppercase;
   cursor: pointer;
   display: inline-block;
+  vertical-align: middle;
   cursor: pointer;
-  width: 90px;
+  width: 80px;
   padding-left: 65px;
 }
 
 .filter-checkbox {
-  margin-bottom: 20px;
+  margin-bottom: 22px;
 }
 
 .input-checkbox:checked + .input-checkbox-label {
@@ -800,7 +891,6 @@ color: #81b3d2;
 .input-checkbox + .input-checkbox-label::before {
   content: "";
   position: absolute;
-  top: -2px;
   left: 0;
   width: 27px;
   height: 23px;
@@ -826,7 +916,16 @@ color: #81b3d2;
   color: #ffffff;
   text-transform: uppercase;
   display: inline-block;
-  padding-left: 40px;
+  vertical-align: middle;
+  padding-left: 41px;
+}
+
+.input-checkbox:disabled + .input-checkbox-label::before {
+  background: url(../img/checkbox-disabled-on.svg) no-repeat left top;
+}
+
+.input-checkbox:checked:disabled + .input-checkbox-label::before {
+  background: url(../img/checkbox-disabled-off.svg) no-repeat left top;
 }
 
 .filter-text {
@@ -834,8 +933,13 @@ color: #81b3d2;
   line-height: 21px;
   color: #ffffff;
   text-transform: uppercase;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin: 0;
   padding: 0;
 }
@@ -852,17 +956,15 @@ color: #81b3d2;
   top: -10px;
 }
 
-.button-range-min {
-  left: -3px;
-}
-
 .button-range-max {
   left: 79%;
 }
 
 .button-range:hover,
 .button-range:focus {
-  background: #1c4f80;
+  -webkit-transform: scale(1.1);
+      -ms-transform: scale(1.1);
+          transform: scale(1.1);
 }
 
 .input-price {
@@ -877,30 +979,36 @@ color: #81b3d2;
 
 .filter-display {
   font-size: 14px;
-  line-height: 21px;
   color: #ffffff;
-  padding: 11px 34px;
   background: none;
   text-transform: uppercase;
   border: 2px solid #ffffff;
+  border-radius: 2px;
   display: block;
   margin: 0 auto;
-  margin-top: 8px;
-  padding: 6px 35px;
+  margin-top: 12px;
+  margin-left: 86px;
   cursor: pointer;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 135px;
+  height: 35px;
 }
 
-.filter-display:hover,
-.filter-display:focus {
+.filter-display:hover {
   color: #000000;
-  background-color: #ffffff;
+  background: #ffffff;
 }
 
 .hotels-sort {
   text-transform: uppercase;
   height: 86px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-bottom: 1px solid #e5e5e5;
 }
 
@@ -913,8 +1021,11 @@ color: #81b3d2;
 }
 
 .sorting-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   width: 906px;
+  margin-top: 3px;
 }
 
 .sorting-filter {
@@ -941,6 +1052,8 @@ color: #81b3d2;
 }
 
 .updown {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 
@@ -987,27 +1100,24 @@ color: #81b3d2;
   list-style: none;
   text-transform: uppercase;
   margin: 0;
-  padding-inline-start: 0px;
+  padding: 0;
 }
 
 .hotels-item {
   border-bottom: 1px solid #e5e5e5;
-  height: 150px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   margin: 0;
   padding: 0;
 }
 
 .hotel-name {
-  display: inline-block;
   margin: 0;
   padding: 0;
-  margin-bottom: 3px;
 }
 
 .hotel-name-link {
-  display: inline-block;
-  margin-bottom: 5px;
   font-size: 21px;
   line-height: 26px;
   font-weight: bold;
@@ -1018,7 +1128,7 @@ color: #81b3d2;
 .hotels-img {
   margin-right: 30px;
   margin-left: 72px;
-  margin-bottom: 61px;
+  margin-bottom: 30px;
   margin-top: 30px;
 }
 
@@ -1027,23 +1137,44 @@ color: #81b3d2;
 }
 
 .hotel-info {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 90px;
   margin-right: 30px;
   width: 750px;
   margin-top: 25px;
+  margin-bottom: 30px;
 }
 
 .extra {
-  margin-bottom: 11px;
+  margin-bottom: 13px;
+  margin-top: 7px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.info-link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .reviews {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .hotel-name-link:hover,
@@ -1060,26 +1191,26 @@ color: #81b3d2;
   line-height: 21px;
   color: #333333;
   width: 110px;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
   text-align: left;
-  display: inline-block;
 }
 
 .hotel-price {
   font-size: 14px;
   line-height: 21px;
   color: #333333;
+  margin-left: 6px;
 }
 
 .hotel-detail {
-  display: inline-block;
   font-size: 14px;
   font-weight: bold;
   line-height: 21px;
   color: #ffffff;
   background-color: #81b3d2;
   text-decoration: none;
-  margin-right: 3px;
+  margin-right: 5px;
   padding-top: 3px;
   padding-bottom: 3px;
   padding-right: 17px;
@@ -1098,7 +1229,6 @@ color: #81b3d2;
 }
 
 .hotel-booking {
-  display: inline-block;
   font-size: 14px;
   font-weight: bold;
   line-height: 21px;
@@ -1127,8 +1257,9 @@ color: #81b3d2;
   background-position: 100% 0%;
   background-repeat: space no-repeat;
   height: 17px;
-  margin-right: 0;
+  margin-right: 1px;
   margin-left: auto;
+  margin-bottom: 46px;
 }
 
 .stars-four {
@@ -1154,9 +1285,10 @@ color: #81b3d2;
   background-color: #f2f2f2;
   width: 110px;
   height: 27px;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   text-align: center;
-  margin-bottom: 5px;
+  margin-left: 2px;
 }
 
 .visually-hidden {
