--- a/css/styles.css
+++ b/css/styles.css
@@ -114,7 +114,7 @@ color: #81b3d2;
 
 .banner {
   height: 510px;
-  background: url("../img/polygon.svg") no-repeat 50% 100%, #a1c6e0 url("../img/bg.png") no-repeat 100% 20%;;
+  background: url("../img/polygon.svg") no-repeat 50% 100%, #a1c6e0 url("../img/bg.png") no-repeat 100% 20%;
   background-size: 100% auto, 100% auto;
   text-align: center;
   display: -webkit-box;
