--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,7 @@ body {
 }
 
 .navigation-item:nth-child(n+3) {
+  text-align: right;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
@@ -114,7 +115,7 @@ color: #81b3d2;
 
 .banner {
   height: 510px;
-  background: url("../img/polygon.svg") no-repeat 50% 100%, #a1c6e0 url("../img/bg.png") no-repeat 100% 20%;
+  background: url("../img/polygon.svg") no-repeat 50% 100%, #a1c6e0 url("../img/bg.jpg") no-repeat 100% 20%;
   background-size: 100% auto, 100% auto;
   text-align: center;
   display: -webkit-box;
@@ -316,6 +317,7 @@ color: #81b3d2;
 .features-list {
   display: -webkit-box;
   display: -ms-flexbox;
+  flex-wrap: wrap;
   display: flex;
   width: 100%;
   min-height: 330px;
@@ -416,12 +418,17 @@ color: #81b3d2;
 }
 
 .map {
+  background-image: url("../img/map.jpg");
   width: 100%;
   height: 470px;
   background-repeat: no-repeat;
   background-position: 50% 0%;
   height: 593px;
   background-size: 100% auto;
+  margin-bottom: -120px;
+}
+
+.map-img {
   margin-bottom: -120px;
 }
 
@@ -720,6 +727,7 @@ color: #81b3d2;
   margin: 0 auto;
   padding: 0;
   list-style: none;
+  max-width: 160px;
   -webkit-transform: translate(33px);
       -ms-transform: translate(33px);
           transform: translate(33px);
@@ -1024,7 +1032,8 @@ color: #81b3d2;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 906px;
+  flex-wrap: wrap;
+  min-width: 906px;
   margin-top: 3px;
 }
 
